--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minion Translator</title>
+    <title>Groot Translator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav class="navigation container">
-        <h1>Banana talk....</h1>
+        <h1>Groot talk....</h1>
     </nav>
     
     
